--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,3 @@
+{<img src="https://travis-ci.com/isidzukuri/lib_agregator.svg?branch=master" alt="Build Status" />}[https://travis-ci.com/isidzukuri/lib_agregator]
+
 == README
